--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ redis:
     - "3679:3679"
 web:
   build: .
+  command: /app-ve/bin/python /app/manage.py runserver 0.0.0.0:8000
   volumes:
       - .:/app/
   ports:
