Switch to running via supervisord

--- a/container/etc/supervisor/conf.d/app.conf
+++ b/container/etc/supervisor/conf.d/app.conf
@@ -3,3 +3,13 @@ command=/app-ve/bin/python /app/manage.py runserver 0.0.0.0:8000
 autostart=true
 autorestart=unexpected
 startsecs=5
+redirect_stdout=true
+redirect_stderr=true
+stdout_events_enabled=true
+stderr_events_enabled=true
+
+[eventlistener:stdout]
+command = supervisor_stdout
+buffer_size = 1
+events = PROCESS_LOG
+result_handler = supervisor_stdout:event_handler
