Reduce queues, change timezone

--- a/container/etc/supervisor/conf.d/rq.conf
+++ b/container/etc/supervisor/conf.d/rq.conf
@@ -1,5 +1,5 @@
 [program:rqworker]
-command=/app-ve/bin/python /app/manage.py rqworker high default low
+command=/app-ve/bin/python /app/manage.py rqworker default
 autostart=true
 autorestart=unexpected
 startsecs=5
