--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,21 @@
 redis:
   image: redis:3.0.7-alpine
-  command: redis-server --appendonly yes
-  volumes:
-    - "data:/data"
+  command: ["redis-server", "--appendonly", "yes"]
   ports:
     - "3679:3679"
 web:
   build: .
+  command: /app-ve/bin/python /app/manage.py runserver 0.0.0.0:8000
   volumes:
       - .:/app/
   ports:
-      - "8000:8000"
+    - "8000:8000"
+  links:
+    - redis
+worker:
+  build: .
+  command: /app-ve/bin/python /app/manage.py rqworker default
+  volumes:
+      - .:/app/
   links:
     - redis
