--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ django-redis-cache==1.6.5
 -e git+https://github.com/ui/django-rq.git@3bd07acd92143fa4e77089b6d65cde5a7a6aee4b#egg=django_rq-master
 redis==2.10.5
 rq==0.5.6
+pytz==2015.7
 
 six==1.10.0
 django-environ==0.4.0
