--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,14 @@ requests==2.9.1
 py==1.4.31
 pytest==2.8.7
 pytest-django==2.9.1
+flake8==2.6.2
+mccabe==0.5.0
+pycodestyle==2.0.0
+pyflakes==1.2.3
+pytest-flake8==0.5
+
+
+coverage==4.1
+pytest-cov==2.3.0
+pytest-cover==3.0.0
+pytest-coverage==0.0
