--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ venv
 # local environment overrides
 .env
 
+# local databases
+*.db
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
