--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ redis:
     - "3679:3679"
 web:
   build: .
+  entrypoint: /app/run.sh
   command: /app-ve/bin/python /app/manage.py runserver 0.0.0.0:8000
   volumes:
       - .:/app/
@@ -14,6 +15,7 @@ web:
     - redis
 worker:
   build: .
+  entrypoint: /app/run.sh
   command: /app-ve/bin/python /app/manage.py rqworker default
   volumes:
       - .:/app/
