Only create one object per day/filter

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,11 @@ web:
   command: /app-ve/bin/python /app/manage.py runserver 0.0.0.0:8000
   volumes:
       - .:/app/
+      - ./data:/data/
   ports:
     - "8000:8000"
+  environment:
+    - DB_NAME=/data/container.db
   links:
     - redis
 worker:
