Add docker sample

--- a/container/etc/supervisor/conf.d/app.conf
+++ b/container/etc/supervisor/conf.d/app.conf
@@ -1,5 +1,15 @@
 [program:app]
-command=/app-ve/bin/python /app/manage.py runserver 0.0.0.0:8000
+command=/app/run.sh /app-ve/bin/python /app/manage.py runserver 0.0.0.0:8000
+autostart=true
+autorestart=unexpected
+startsecs=5
+redirect_stdout=true
+redirect_stderr=true
+stdout_events_enabled=true
+stderr_events_enabled=true
+
+[program:worker]
+command=/app/run.sh /app-ve/bin/python /app/manage.py rqworker default
 autostart=true
 autorestart=unexpected
 startsecs=5
