--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,16 @@
 redis:
   image: redis:3.0.7-alpine
   command: ["redis-server", "--appendonly", "yes"]
-  ports:
-    - "3679:3679"
 web:
   build: .
-  entrypoint: /app/run.sh
-  command: /app-ve/bin/python /app/manage.py runserver 0.0.0.0:8000
+  #entrypoint: /app/run.sh
+  #command: /app-ve/bin/python /app/manage.py runserver 0.0.0.0:8000
   volumes:
       - .:/app/
       - ./data:/data/
   ports:
-    - "8000:8000"
+    - "80:8000"
   environment:
     - DB_NAME=/data/container.db
-  links:
-    - redis
-worker:
-  build: .
-  entrypoint: /app/run.sh
-  command: /app-ve/bin/python /app/manage.py rqworker default
-  environment:
-    - DB_NAME=/data/container.db
-  volumes:
-      - ./data:/data/
-      - .:/app/
   links:
     - redis
