--- a/container/etc/supervisor/conf.d/rq.conf
+++ b/container/etc/supervisor/conf.d/rq.conf
@@ -1,5 +1,5 @@
 [program:rqworker]
-command=/app-ve/bin/python /app/manage.py rqworker default
+command=/app/run.sh /app-ve/bin/python /app/manage.py rqworker default
 autostart=true
 autorestart=unexpected
 startsecs=5
@@ -7,9 +7,3 @@ redirect_stdout=true
 redirect_stderr=true
 stdout_events_enabled=true
 stderr_events_enabled=true
-
-[eventlistener:stdout]
-command = supervisor_stdout
-buffer_size = 1
-events = PROCESS_LOG
-result_handler = supervisor_stdout:event_handler
