Add scheduled run every 1 minute

--- a/container/etc/supervisor/conf.d/rq.conf
+++ b/container/etc/supervisor/conf.d/rq.conf
@@ -7,3 +7,13 @@ redirect_stdout=true
 redirect_stderr=true
 stdout_events_enabled=true
 stderr_events_enabled=true
+
+[program:rqscheduler]
+command=/app/run.sh /app-ve/bin/python /app/manage.py rqscheduler default
+autostart=true
+autorestart=unexpected
+startsecs=5
+redirect_stdout=true
+redirect_stderr=true
+stdout_events_enabled=true
+stderr_events_enabled=true
