--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ click==6.2
 django-redis-cache==1.6.5
 -e git+https://github.com/ui/django-rq.git@3bd07acd92143fa4e77089b6d65cde5a7a6aee4b#egg=django_rq-master
 redis==2.10.5
-rq==0.5.6
+rq==0.6.0
+rq-scheduler==0.6.1
 pytz==2015.7
 python-dateutil==2.5.3
 
