Get static file serving DEBUG on or off

--- a/container/etc/supervisor/conf.d/app.conf
+++ b/container/etc/supervisor/conf.d/app.conf
@@ -1,5 +1,5 @@
 [program:app]
-command=/app/run.sh /app-ve/bin/python /app/manage.py runserver 0.0.0.0:8000
+command=/app/run.sh /app/projects/serve.sh
 autostart=true
 autorestart=unexpected
 startsecs=5
