--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,9 @@ web:
     - "80:8000"
   environment:
     - DB_NAME=/data/container.db
-    - DEBUG=False
+    - DEBUG=True
     - GUNICORN_WORKERS=10
+    - REDIS_URL=redis:6379
   links:
     - redis
 rqworker:
@@ -23,6 +24,7 @@ rqworker:
     - DB_NAME=/data/container.db
     - DEBUG=False
     - GUNICORN_WORKERS=10
+    - REDIS_URL=redis:6379
   volumes:
       - .:/app/
       - ./data:/data/
@@ -35,6 +37,7 @@ rqscheduler:
     - DB_NAME=/data/container.db
     - DEBUG=False
     - GUNICORN_WORKERS=10
+    - REDIS_URL=redis:6379
   volumes:
       - .:/app/
       - ./data:/data/
