Simple monte carlo forecast (#35)
* Pin to a specific sha of debian
* Output html coverage report
* Increase test coverage all over the place
* Run docker test with an in memory db
* Don't require redis to test - Fixes #8\
* Add a nice forecast display
* Add better logging, whitespace handling in JIRA status names
* Improve summarize_results logging
* Add a form to modify the forecast
* Add tool tips to main dashboard % display
* Update sample docker compose
* Add forecast explainer
* Version bump

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,7 @@
 redis:
   image: redis:3.0.7-alpine
+  ports:
+    - "6379:6379"
 web:
   build: .
   command: /app/projects/serve.sh
@@ -10,8 +12,9 @@ web:
     - "80:8000"
   environment:
     - DB_NAME=/data/container.db
-    - DEBUG=False
+    - DEBUG=True
     - GUNICORN_WORKERS=10
+    - REDIS_URL=redis:6379
   links:
     - redis
 rqworker:
@@ -21,6 +24,7 @@ rqworker:
     - DB_NAME=/data/container.db
     - DEBUG=False
     - GUNICORN_WORKERS=10
+    - REDIS_URL=redis:6379
   volumes:
       - .:/app/
       - ./data:/data/
@@ -33,6 +37,7 @@ rqscheduler:
     - DB_NAME=/data/container.db
     - DEBUG=False
     - GUNICORN_WORKERS=10
+    - REDIS_URL=redis:6379
   volumes:
       - .:/app/
       - ./data:/data/
