--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
   - pip install python-coveralls
 script: "make test"
 after_success:
-  coveralls
+  - bash <(curl -s https://codecov.io/bash)
 services:
   - redis-server
 env:
