Try and speed up builds by caching pip

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: python
+cache: pip
 python:
   - "3.5"
 install:
   - pip install python-coveralls
-script: "make test"
+script: "make test VENV_BIN=''"
 after_success:
   - bash <(curl -s https://codecov.io/bash)
 services:
