use requirements.txt

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ cache: pip
 python:
   - "3.5"
 install:
-  - pip install python-coveralls
+  - pip install -r requirements.txt
 script: "make test VENV_BIN=''"
 after_success:
   - bash <(curl -s https://codecov.io/bash)
